CHANGES
=======

* I am the antipattern
* Removed silly placeholder test
* Added configuration system, with tests
* Update README.md
* Update README.md
* renaming travis.yaml to travis.yml
* Added coverage to our testing setup, and a config for travis-ci
* added a version number
* Deleting OSWG template changelog, in favor of the one generated by PBR:
* updated changelog
* Moved sphinx stuff into /docs, did some setup work for tox
* Creating initial project structure
* Deleted swp file
* initial commit