@@ -19,11 +19,7 @@ def handle_request():
     if not translated_path.endswith('.html') and os.path.exists(translated_path):
         mime, encoding = mimetypes.guess_type(translated_path)
 
-        if mime:
-            return flask.send_file(translated_path), 200, {'Content-Type': mime}
-        else:
-            return flask.send_file(translated_path), 200, {'Content-Type': 'application/unknown'}
-
+        return flask.send_file(translated_path), 200, {'Content-Type': mime}
 
     template_candidates = [translated_path]
 
@@ -36,7 +32,7 @@ def handle_request():
             template_context = {}
 
             with codecs.open(template_path, encoding="utf-8") as template_source:
-                return flask.render_template_string(template_source.read(), **template_context)
+                return flask.make_response(flask.render_template_string(template_source.read(), **template_context),200)
 
     except StopIteration:
         return serve_error_page(404)
@@ -44,15 +40,22 @@ def handle_request():
 
 def serve_error_page(error_code):
     request = flask.request
+    app = flask.current_app
+
     # TODO: this seems silly
     # We shouldn't even need to send the request object,
     # and the second argument should usually be request.path anyways
-    search_path = build_search_path_for_request(
-        request, request.path, append=['_layouts', '_includes'], include_start_directory=True)
-    template_path = find_in_search_path('%s.html' % error_code, search_path)
 
-    if template_path:
+    trimmed_path = app.trim_path(request.path)
+    search_path = build_search_path_for_request(
+        request, trimmed_path, append=['_layouts', '_includes'], include_start_directory=True)
+
+
+    try:
+        template_path = find_in_search_path('%s.html' % error_code, search_path)
+
         with codecs.open(template_path, encoding="utf-8") as template_source:
-            return flask.render_template_string(template_source.read()), error_code
-    else:
+            return flask.make_response(flask.render_template_string(template_source.read()), error_code)
+
+    except StopIteration:
         return "Please provide a %s.html!" % error_code, error_code
